--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 	<hr>
 
 	<div id= "document_1" >
-		- INVISO GRP (docs) : <a id = "lien" href = "Inviso group">inviso 		document</a><br>
-		- BASAN GRP (docs) : <a id = "lien" href = "group Basan">basan 			document</a>
+		- INVISO GRP (docs) : <a id = "lien" href = "Inviso group.docx">inviso document</a><br>
+		- BASAN GRP (docs) : <a id = "lien" href = "group Basan">basan document</a>
 	</div> 
 
 	<div id = "rse" >
-		- Rapport RSE INVISO (pdf) : <a id = "lien" href = "Rapport-RSE-		iNVISO-Web">RSE_Inviso</a><br>
-		- Rapport RSE LECOFRUIT (pdf) : <a id = "lien" href = "Rapport-			RSE-Lecofruit-2022">RSE_Lecofruit</a>
+		- Rapport RSE INVISO (pdf) : <a id = "lien" href = "Rapport-RSE-iNVISO-Web">RSE_Inviso</a><br>
+		- Rapport RSE LECOFRUIT (pdf) : <a id = "lien" href = "Rapport-RSE-Lecofruit-2022.pdf">RSE_Lecofruit</a>
 	</div>
 
 	<div id = "convention" >
-		- Convention INVISO GRP et IECD (pdf): <a id = "lien" href = 		"Rapport-RSE-iNVISO-Web">Convention</a>
+		- Convention INVISO GRP et IECD (pdf): <a id = "lien" href = "">Convention</a>
 	</div>
 
 	<div id = "copy">
