--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	</div>
 
 	<div id = "convention" >
-		- Convention INVISO GRP et IECD (pdf): <a id = "lien" href = "">Convention</a>
+		- Convention INVISO GRP et IECD (pdf): <a id = "lien" href = "20230120-Signature-de-convention-INVISO-IECD.pdf">Convention</a>
 	</div>
 
 	<div id = "copy">
