--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 
 	<div id= "document_1" >
 		- INVISO GRP (docs) : <a id = "lien" href = "Inviso group.docx">inviso document</a><br>
-		- BASAN GRP (docs) : <a id = "lien" href = "group Basan">basan document</a>
+		- BASAN GRP (docs) : <a id = "lien" href = "https://visitemi.infinityfreeapp.com/Rapport-RSE-iNVISO-Web.pdf">basan document</a>
 	</div> 
 
 	<div id = "rse" >
-		- Rapport RSE INVISO (pdf) : <a id = "lien" href = "Rapport-RSE-iNVISO-Web">RSE_Inviso</a><br>
+		- Rapport RSE INVISO (pdf) : <a id = "lien" href = "https://visitemi.infinityfreeapp.com/?i=3">RSE_Inviso</a><br>
 		- Rapport RSE LECOFRUIT (pdf) : <a id = "lien" href = "Rapport-RSE-Lecofruit-2022.pdf">RSE_Lecofruit</a>
 	</div>
 
