--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 	<div id= "document_1" >
 		- INVISO GRP (docs) : <a id = "lien" href = "Inviso group.docx">inviso document</a><br>
-		- BASAN GRP (docs) : <link id = "lien" href = "https://visitemi.infinityfreeapp.com/Rapport-RSE-iNVISO-Web.pdf" title = "basan document">
+		- BASAN GRP (docs) : <a id = "lien" href = "https://visitemi.infinityfreeapp.com/Rapport-RSE-iNVISO-Web.pdf" >basan document</a>
 	</div> 
 
 	<div id = "rse" >
