--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
         transition: all 0.5s ease;
 
     }
-    
+
+	#acceuil {
+    	color : white;
+    }
+	#acceuil:hover {
+    	color : orange;
+    }
+	
     #lien:hover{
     	color : orange;
     }
@@ -109,6 +116,7 @@
 </div>
 
 <button id = "btn" >Voir</button>
+<h1 id = "acceuil">PREPA_VISITE _ 2026</h1>
 <button id = "btn_1" hidden>Retour</button>
 
 <script>
