--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	</div>
 </div>
 
-<h1 id = "acceuil">PREPA_VISITE _ 2026</h1>
+<div id = "acceuil">PREPA_VISITE _ 2026</div>
 <button id = "btn" >Voir</button>
 <button id = "btn_1" hidden>Retour</button>
 
